fix player z-index

--- a/_html/css/styles.css
+++ b/_html/css/styles.css
@@ -6597,7 +6597,7 @@ div.chocolat-wrapper .zoomCursor .icon {
   -webkit-appearance: button;
 }
 .video-container .jwplayer {
-  z-index: 1;
+  z-index: 2;
 }
 .video-container .top-bar {
   background: url("../img/shadow-reverse.png") repeat-x;
