--- a/_html/sass/components/_video.scss
+++ b/_html/sass/components/_video.scss
@@ -51,7 +51,7 @@
   }
 
   .jwplayer {
-    z-index: 1;
+    z-index: 2;
   }
 
   .top-bar {
